# spehleonlp.github.io

./: .gitignore  .gitmodules  LICENSE  README.md
erosion/: CLAUDE.md  Makefile  create_envelopes.c  create_envelopes.h  create_gradient.c  create_gradient.h  create_textures.js  create_video.js  document_gl.js  document_script.js  index.html  progress.js  prototype.html  remap_gradient.py  serve.sh  server.py  style.css  test.html  video_processor.c  video_processor.js  video_processor.wasm  webm-writer-0.3.0.js  worker.js
erosion/docs/plans/: 2026-01-24-effect-stack-architecture.md  2026-01-31-hessian-flow-design.md
erosion/mp4box.js/: mp4box.all.min.js  mp4box.simple.min.js
erosion/scripts/: coi-serviceworker.js  create_textures.js  create_video.js  document_gl.js  document_script.js  ffmpeg-worker.js  ffmpeg_helpers.js  ffmpeg_logger.js  video_processor.js  video_processor.wasm  webgpu_pipeline.js  webgpu_utils.js  webgpu_video_processor.js  worker.js
erosion/shaders/: erosion.frag  erosion.vert
erosion/src/: CMakeLists.txt  Makefile  chamfer.c  chamfer.h  contour_extract.c  contour_extract.h  contour_flow.c  contour_flow.h  contour_smooth.c  contour_smooth.h  create_envelopes.c  create_envelopes.c.backup  create_envelopes.h  create_gradient.c  create_gradient.h  debug_png.c  debug_png.h  effect_stack_api.h  fft_blur.c  fft_blur.h  flood_fill.c  flood_fill.h  fluid_solver.c  fluid_solver.h  gif_decoder.c  gif_decoder.h  helmholtz.c  helmholtz.h  interp_quantized.c  interp_quantized.h  label_regions.c  label_regions.h  normal_map.c  normal_map.h  part2.txt  sdf_layered.c  sdf_layered.h  smart_blur.c  smart_blur.h  swirl.c  (+2 more)
gradient-mapping/: CLAUDE.md  about.html  about.md  index.html  run_debug_test.sh  run_test.sh  script.js  shader_to_be_copied.glsl  style.css  worker.js
gradient-mapping/demo-images/: manifest.json
gradient-mapping/docs/plans/: 2026-02-04-uint8-params.md  2026-02-17-pipeline-memoization-design.md  2026-02-17-pipeline-memoization-plan.md
gradient-mapping/scripts/: effect_catalog.json  effect_stack.js  effect_stack.wasm
gradient-mapping/shaders/: erosion.frag
gradient-mapping/src/: CMakeLists.txt  Makefile  debug_output.cpp  debug_output.h  effect_stack_api.c  effect_stack_api.cpp  effect_stack_api.h  erosion_pipeline.c  erosion_pipeline.cpp  erosion_pipeline.h  gradient_pipeline.c  gradient_pipeline.cpp  gradient_pipeline.h  js_imports.js  main.cpp  pipeline_memo.h  utility.h
gradient-mapping/src/commands/: constrained_poisson_cmd.c  constrained_poisson_cmd.cpp  constrained_poisson_cmd.h  dcel_build_cmd.cpp  dcel_build_cmd.h  dcel_features_cmd.cpp  dcel_features_cmd.h  debug_png.c  debug_png.cpp  debug_png.h  dijkstra_state.h  divergence_field_cmd.cpp  divergence_field_cmd.h  edge_dijkstra_cmd.cpp  edge_dijkstra_cmd.h  eigen_cmd.c  eigen_cmd.cpp  eigen_cmd.h  energy_flood_cmd.cpp  energy_flood_cmd.h  erosion_dijkstra.c  erosion_dijkstra.cpp  erosion_dijkstra.h  fft_blur.c  fft_blur.cpp  fft_blur.h  half_edge.h  heightmap_ops.h  hessian_cmd.c  hessian_cmd.cpp  hessian_cmd.h  hessian_flow_dbg.c  hessian_flow_dbg.cpp  hessian_flow_dbg.h  hessian_from_eigen_cmd.c  hessian_from_eigen_cmd.cpp  hessian_from_eigen_cmd.h  interp_quantized.c  interp_quantized.cpp  interp_quantized.h  (+34 more)
gradient-mapping/src/image_memo/: create_envelopes.c  create_envelopes.cpp  create_envelopes.h  image_memo.c  image_memo.cpp  image_memo.h
gradient-mapping/src/sources/: curl_noise.c  curl_noise.cpp  curl_noise.h  linear_gradient.cpp  linear_gradient.h  noise.c  noise.cpp  noise.h  perlin_noise.c  perlin_noise.cpp  perlin_noise.h  types.h  worley_noise.c  worley_noise.cpp  worley_noise.h
sensor-test/: README.md  index.html  script.js  style.css
